--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(path: ':openCVLibrary343')
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
